--- a/public/style.css
+++ b/public/style.css
@@ -303,6 +303,13 @@ div.tile {
     height: 120px;
     margin: 10px;
     box-shadow: 5px 10px #ddddddee;
+    cursor: pointer;
+}
+div.tile:active {
+    box-shadow: none;
+    position: relative;
+    top: 5px;
+    left: 5px; 
 }
 
 span.placeholder {
@@ -325,6 +332,7 @@ div.tile-title {
     height: 30px;
     vertical-align: middle;
     line-height: 30px;
+    overflow: hidden;
 }
 
 div.tile-red {
