--- a/public/style.css
+++ b/public/style.css
@@ -39,6 +39,7 @@ div.page-content {
 }
 div.page-tray {
     width: 30%;
+    min-width: 300px;
     border-left: 3px solid #aaaaaa44;
     padding: 0px;
     margin: 0px;
