--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -109,7 +109,7 @@
                 </div>
                 <div class="tray-order">
 
-                    <div class="order-line-item">
+                    <div class="order-header-item">
                         <div class="order-header">
                             <div class="header-content">
                                 Item
