Fixed whitespace issue

--- a/views/pages/index.ejs
+++ b/views/pages/index.ejs
@@ -56,9 +56,7 @@
                                 <div class="tile-image">
                                         <img class="thumbnail" src="<%=products[i].ProductImageURL%>" />
                                 </div>
-                                <div class="tile-title tile-title-red">
-                                        <%= products[i].ProductName %>
-                                </div>
+                                <div class="tile-title tile-title-red"><%= products[i].ProductName %></div>
                                 <span class="metadata">
                                     <span id="id"><%= products[i].ProductID %></span>
                                     <span id="price"><%= products[i].Price %></span>
@@ -70,9 +68,7 @@
                                     <div class="tile-image">
                                             <img class="thumbnail" src="<%=products[i].ProductImageURL%>" />
                                     </div>
-                                    <div class="tile-title tile-title-yellow">
-                                            <%= products[i].ProductName %>
-                                    </div>
+                                    <div class="tile-title tile-title-yellow"><%= products[i].ProductName %></div>
                                     <span class="metadata">
                                             <span id="id"><%= products[i].ProductID %></span>
                                             <span id="price"><%= products[i].Price %></span>
@@ -84,9 +80,7 @@
                                     <div class="tile-image">
                                             <img class="thumbnail" src="<%=products[i].ProductImageURL%>" />
                                     </div>
-                                    <div class="tile-title tile-title-blue">
-                                            <%= products[i].ProductName %>
-                                    </div>
+                                    <div class="tile-title tile-title-blue"><%= products[i].ProductName %></div>
                                     <span class="metadata">
                                             <span id="id"><%= products[i].ProductID %></span>
                                             <span id="price"><%= products[i].Price %></span>
